Adding support for username different from the e-mail adress.

--- a/example.ini
+++ b/example.ini
@@ -4,6 +4,10 @@
 Server      =
 # Your e-mail adress
 Adress      =
+# Username for login at the SMTP server
+# Set this if it is different from your
+# e-mail adress
+User        =
 # Email password
 Password    =
 
